discussion/kv_engine/163588/163588_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47604: Support concurrent flush and compaction in Nexus

Change-Id: I44ff199d07910c02dc85b2e36149513487a06ac2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-11-24 11:28:15.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-11-24 12:21:01.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35635/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:2485:7:
error: redefinition of "NexusPurgedItemCtx"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35635/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41980/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc(2485): error C2011: "NexusPurgedItemCtx": "class" type redefinition ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41980/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14164/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:2485:7: error: redefinition of "NexusPurgedItemCtx" [clang-diagnostic-error]
class NexusPurgedItemCtx : public PurgedItemCtx {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:939:7: note: previous definition is here
class NexusPurgedItemCtx : public PurgedItemCtx {
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14164/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:2485:7:
error: redefinition of "NexusPurgedItemCtx" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14164/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3796/ : FAILURE

Compile error at [2021-11-24T12:13:31.518Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:2485:7:
error: redefinition of "NexusPurgedItemCtx"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3796/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16073/ : FAILURE

Compile error at [2021-11-24T12:14:38.463Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:2485:7:
error: redefinition of ?class NexusPurgedItemCtx?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16073/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15787/ : FAILURE

Compile error at [2021-11-24T12:11:29.712Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:2485:7:
error: redefinition of ?class NexusPurgedItemCtx?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15787/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16806/ : FAILURE

Compile error at [2021-11-24T12:16:47.566Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:2485:7:
error: redefinition of "NexusPurgedItemCtx"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16806/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24163/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14958/ : FAILURE

Compile error at [2021-11-24T11:31:25.001Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:2485:7:
error: redefinition of "NexusPurgedItemCtx"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14958/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3872/ : FAILURE

Compile error at [2021-11-24T11:43:19.570Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@2/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:2485:7:
error: redefinition of ?class NexusPurgedItemCtx?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3872/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12971/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
